# tauri-example

./: .prettierrc.json  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.js  main.ts  main.tsx  queries.js  styles.css  ui.js
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/resources/: config.toml
src-tauri/resources/schemas/: schema.toml
src-tauri/src/: config.rs  consts.rs  key_pair.rs  main.rs  schema.rs
