[package]
name = "tauri-example"
version = "0.0.0"
description = "A Tauri App with p2panda"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
aquadoggo = "0.5.0"
p2panda-rs = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
