[package]
name = "p2panda-tauri-example"
version = "0.1.0"
description = "A Tauri App with p2panda"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
anyhow = "1.0.79"
aquadoggo = "0.7.1"
env_logger = "0.10.1"
figment = { version = "0.10.14", features = ["toml", "env"] }
hex = "0.4.3"
p2panda-rs = "0.8.1"
tauri = { version = "1.4", features = ["shell-open", "config-toml"] }
tempdir = "0.3.7"
tokio = { version = "1.34.0", feature = "sleep" }
toml = "0.8.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
